--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,24 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-tabs>
+
+    <ion-router-outlet></ion-router-outlet>
+
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="tab1" href="/tab1">
+        <ion-icon name="triangle"></ion-icon>
+        <ion-label>Scales</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="tab2" href="/tab2">
+        <ion-icon name="ellipse"></ion-icon>
+        <ion-label>Chords</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="tab3" href="/tab3">
+        <ion-icon name="square"></ion-icon>
+        <ion-label>Matching</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+
+  </ion-tabs>
 </ion-app>
