feat(scales list): piano component to visualize notes

--- a/src/app/infrastructure/web/pages/main-page/main-page.component.html
+++ b/src/app/infrastructure/web/pages/main-page/main-page.component.html
@@ -6,17 +6,18 @@
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-accordion-group [multiple]="true">
-    @for (scale of (scales | async); track $index) {
-      <ion-accordion value="{{ scale.tonic.name }}-{{ scale.mode.name }}">
+    @for (scale of (sortedScales$ | async); track $index) {
+      <ion-accordion>
         <ion-item slot="header" lines="none">
           <ion-icon slot="start" name="musical-note-outline"></ion-icon>
           <ion-label>
             <h2>{{ scale.tonic.name }} {{ scale.mode.name }}</h2>
-            <p>{{ getScalesNotes(scale) }}</p>
+            <p>{{ getScalesNotesRepresentation(scale) }}</p>
           </ion-label>
         </ion-item>
 
         <ion-list slot="content" lines="none">
+          <app-piano-octave [scale]="scale"></app-piano-octave>
           @for (note of scale.notes; track note) {
             <ion-item>
               <ion-icon slot="start" name="musical-note-outline"></ion-icon>
